--- a/notebook/rakuten_animeTshirts_prices_v3.ipynb
+++ b/notebook/rakuten_animeTshirts_prices_v3.ipynb
@@ -10,10 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "8417d04c-2aad-4094-a799-28f75a1e6a33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Bad key ; font.family in file /Users/ozawaatsushi/.matplotlib/matplotlibrc, line 262 ('; font.family:  IPAexGothic')\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.9.0/lib/matplotlib/mpl-data/matplotlibrc\n",
+      "or from the matplotlib source distribution\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now: Local env\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "import sys\n",
@@ -33,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "id": "481ed8a3-df2d-47e3-8f50-5315a3d5c384",
    "metadata": {},
    "outputs": [],
@@ -47,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "id": "e4f633e8-fc0e-4323-9c6d-ccfce98a824d",
    "metadata": {
     "scrolled": true
@@ -105,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "id": "1ad7d328-8354-4f45-a790-77b73e2725ec",
    "metadata": {},
    "outputs": [],
@@ -115,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "id": "ef30fbbf-4404-4946-b9f0-2bb3acdf260b",
    "metadata": {},
    "outputs": [],
@@ -123,7 +142,7 @@
     "df_anime_price = (\n",
     "    df_mst[[\"anime\", \"price\"]]\n",
     "    .groupby(\"anime\")\n",
-    "    .mean()[\"price\"]\n",
+    "    .median()[\"price\"]\n",
     "    .apply(lambda x: round(x))\n",
     "    .reset_index()\n",
     ")\n",
@@ -135,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "id": "c50f6ed3-a097-451b-9c7a-b5549c37e94d",
    "metadata": {},
    "outputs": [
@@ -170,79 +189,79 @@
        "      <th>0</th>\n",
        "      <td>AKIRA</td>\n",
        "      <td>230</td>\n",
-       "      <td>36883</td>\n",
+       "      <td>21500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>ドラゴンボール</td>\n",
        "      <td>120</td>\n",
-       "      <td>22134</td>\n",
+       "      <td>18300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>攻殻機動隊</td>\n",
        "      <td>116</td>\n",
-       "      <td>24228</td>\n",
+       "      <td>19000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>ナルト</td>\n",
        "      <td>74</td>\n",
-       "      <td>23346</td>\n",
+       "      <td>18000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>マッハGOGOGO</td>\n",
        "      <td>22</td>\n",
-       "      <td>20527</td>\n",
+       "      <td>20400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>犬夜叉</td>\n",
        "      <td>22</td>\n",
-       "      <td>20225</td>\n",
+       "      <td>20000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>鋼の錬金術師</td>\n",
        "      <td>15</td>\n",
-       "      <td>21782</td>\n",
+       "      <td>20000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>ジョジョの奇妙な冒険</td>\n",
        "      <td>10</td>\n",
-       "      <td>12607</td>\n",
+       "      <td>12320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SLAM DUNK</td>\n",
        "      <td>8</td>\n",
-       "      <td>20264</td>\n",
+       "      <td>18500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>うる星やつら</td>\n",
        "      <td>5</td>\n",
-       "      <td>19191</td>\n",
+       "      <td>13799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>るろうに剣心</td>\n",
        "      <td>4</td>\n",
-       "      <td>24895</td>\n",
+       "      <td>22950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>GunSmith Cats</td>\n",
        "      <td>3</td>\n",
-       "      <td>28333</td>\n",
+       "      <td>28000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>サムライチャンプルー</td>\n",
        "      <td>3</td>\n",
-       "      <td>27667</td>\n",
+       "      <td>27000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -256,23 +275,23 @@
       ],
       "text/plain": [
        "            anime  output_text  price\n",
-       "0           AKIRA          230  36883\n",
-       "8         ドラゴンボール          120  22134\n",
-       "11          攻殻機動隊          116  24228\n",
-       "9             ナルト           74  23346\n",
-       "10      マッハGOGOGO           22  20527\n",
-       "12            犬夜叉           22  20225\n",
-       "13         鋼の錬金術師           15  21782\n",
-       "7      ジョジョの奇妙な冒険           10  12607\n",
-       "2       SLAM DUNK            8  20264\n",
-       "3          うる星やつら            5  19191\n",
-       "4          るろうに剣心            4  24895\n",
-       "1   GunSmith Cats            3  28333\n",
-       "6      サムライチャンプルー            3  27667\n",
+       "0           AKIRA          230  21500\n",
+       "8         ドラゴンボール          120  18300\n",
+       "11          攻殻機動隊          116  19000\n",
+       "9             ナルト           74  18000\n",
+       "10      マッハGOGOGO           22  20400\n",
+       "12            犬夜叉           22  20000\n",
+       "13         鋼の錬金術師           15  20000\n",
+       "7      ジョジョの奇妙な冒険           10  12320\n",
+       "2       SLAM DUNK            8  18500\n",
+       "3          うる星やつら            5  13799\n",
+       "4          るろうに剣心            4  22950\n",
+       "1   GunSmith Cats            3  28000\n",
+       "6      サムライチャンプルー            3  27000\n",
        "5          ガッチャマン            1  17300"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,6 +299,14 @@
    "source": [
     "df_agg_tmp.sort_values([\"output_text\"], ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c41ee3d-97db-4a01-a8fe-194cedea05f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
