check: df_big_e

--- a/notebook/check_src_equality.ipynb
+++ b/notebook/check_src_equality.ipynb
@@ -2,34 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "88d4346a-8418-4bdb-b8fc-966ee770478d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now: Local env\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
+    "import sys\n",
+    "import time\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pymysql\n",
-    "from sshtunnel import SSHTunnelForwarder"
+    "import requests\n",
+    "from sshtunnel import SSHTunnelForwarder\n",
+    "\n",
+    "sys.path.append(\"../\")\n",
+    "import datetime\n",
+    "import json\n",
+    "import urllib\n",
+    "from time import sleep\n",
+    "\n",
+    "from vook_db_v7.local_config import CLIENT_ME, ClientId, aff_id, pid, sid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "786b3d1a-4c6a-4f96-895d-0f5e91321e54",
    "metadata": {},
    "outputs": [],
    "source": [
     "SSH_PKEY_PATH = \"~/.ssh/vook-rails-ssh-key-dev.pem\"\n",
-    "# 対応表を読み出し\n",
-    "ng_ok_table = pd.read_csv(\"../data/input/query_ng_ok.csv\")"
+    "ng_ok_table = pd.read_csv(\"../data/input/query_ng_ok.csv\")\n",
+    "size_id = 999\n",
+    "sleep_second = 1\n",
+    "WANT_ITEMS_RAKUTEN = [\n",
+    "    \"itemName\",\n",
+    "    \"itemPrice\",\n",
+    "    \"itemUrl\",\n",
+    "]\n",
+    "HITS_PER_PAGE = 30\n",
+    "req_params = {\n",
+    "    \"applicationId\": CLIENT_ME[\"APPLICATION_ID\"],\n",
+    "    \"affiliateId\": CLIENT_ME[\"AFF_ID\"],\n",
+    "    \"format\": \"json\",\n",
+    "    \"formatVersion\": \"2\",\n",
+    "    \"keyword\": \"\",\n",
+    "    \"hits\": HITS_PER_PAGE,\n",
+    "    \"sort\": \"-itemPrice\",\n",
+    "    \"page\": 0,\n",
+    "    \"minPrice\": 100,\n",
+    "}\n",
+    "REQ_URL = \"https://app.rakuten.co.jp/services/api/IchibaItem/Search/20170706\"\n",
+    "MAX_PAGE = 10\n",
+    "WANT_ITEMS_YAHOO = [\n",
+    "    \"id\",\n",
+    "    \"name\",\n",
+    "    \"url\",\n",
+    "    \"price\",\n",
+    "    \"knowledge_id\",\n",
+    "    \"platform_id\",\n",
+    "    \"size_id\",\n",
+    "    \"created_at\",\n",
+    "    \"updated_at\",\n",
+    "]\n",
+    "REQ_URL_CATE = \"https://shopping.yahooapis.jp/ShoppingWebService/V3/itemSearch\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "5d0200da-61ec-4a38-b7e4-9a16c96a4874",
    "metadata": {},
    "outputs": [],
@@ -176,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "c0e98ed8-f34f-4623-bb2b-04d8914850e9",
    "metadata": {},
    "outputs": [
@@ -184,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Local bind port: 64530\n",
+      "Local bind port: 52911\n",
       "エラーワード　BIG Eが存在しました:\n",
       "BIG EをBIGEに変換します\n",
       "エラーワード　BIG Eが存在しました:\n",
@@ -203,144 +254,310 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
+   "id": "5788aec4-886f-456b-88c0-576ef98456ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def DataFrame_maker_rakuten(keyword, platform_id, knowledge_id, size_id):\n",
+    "    \"\"\"apiコールした結果からdataframeを出力する関数を定義\"\"\"\n",
+    "    cnt = 1\n",
+    "    df = pd.DataFrame(columns=WANT_ITEMS_RAKUTEN)\n",
+    "    req_params[\"page\"] = cnt\n",
+    "    req_params[\"keyword\"] = keyword\n",
+    "    while True:\n",
+    "        req_params[\"page\"] = cnt\n",
+    "        res = requests.get(REQ_URL, req_params)\n",
+    "        res_code = res.status_code\n",
+    "        res = json.loads(res.text)\n",
+    "        if res_code != 200:\n",
+    "            print(\n",
+    "                f\"\"\"\n",
+    "            ErrorCode -> {res_code}\\n\n",
+    "            Error -> {res['error']}\\n\n",
+    "            Page -> {cnt}\"\"\"\n",
+    "            )\n",
+    "        else:\n",
+    "            if res[\"hits\"] == 0:\n",
+    "                print(\"返ってきた商品数の数が0なので、ループ終了\")\n",
+    "                break\n",
+    "            tmp_df = pd.DataFrame(res[\"Items\"])[WANT_ITEMS_RAKUTEN]\n",
+    "            df = pd.concat([df, tmp_df], ignore_index=True)\n",
+    "        if cnt == MAX_PAGE:\n",
+    "            print(\"MAX PAGEに到達したので、ループ終了\")\n",
+    "            break\n",
+    "        # logger.info(f\"{cnt} end!\")\n",
+    "        cnt += 1\n",
+    "        # リクエスト制限回避\n",
+    "        sleep(1)\n",
+    "        print(\"Finished!!\")\n",
+    "\n",
+    "    df[\"platform_id\"] = platform_id\n",
+    "    df[\"knowledge_id\"] = knowledge_id\n",
+    "    df[\"size_id\"] = size_id\n",
+    "    df_main = df.rename(\n",
+    "        columns={\"itemName\": \"name\", \"itemPrice\": \"price\", \"itemUrl\": \"url\"}\n",
+    "    )\n",
+    "    df_main = df_main.reindex(\n",
+    "        columns=[\n",
+    "            \"id\",\n",
+    "            \"name\",\n",
+    "            \"url\",\n",
+    "            \"price\",\n",
+    "            \"knowledge_id\",\n",
+    "            \"platform_id\",\n",
+    "            \"size_id\",\n",
+    "        ]\n",
+    "    )\n",
+    "    print(\"price type before:\", df_main[\"price\"].dtype)\n",
+    "    df_main[\"price\"] = df_main[\"price\"].astype(int)\n",
+    "    print(\"price type after:\", df_main[\"price\"].dtype)\n",
+    "    run_time = datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S.%f\")\n",
+    "    df_main[\"created_at\"] = run_time\n",
+    "    df_main[\"updated_at\"] = run_time\n",
+    "    return df_main\n",
+    "\n",
+    "\n",
+    "def DataFrame_maker_yahoo(keyword, platform_id, knowledge_id, size_id):\n",
+    "    start_num = 1\n",
+    "    step = 100\n",
+    "    max_products = 1000\n",
+    "\n",
+    "    params = {\n",
+    "        \"appid\": ClientId,\n",
+    "        \"output\": \"json\",\n",
+    "        \"query\": keyword,\n",
+    "        \"sort\": \"-price\",\n",
+    "        \"affiliate_id\": aff_id,\n",
+    "        \"affiliate_type\": \"vc\",\n",
+    "        \"results\": 100,  # NOTE: 100個ずつしか取得できない。\n",
+    "    }\n",
+    "\n",
+    "    l_df = []\n",
+    "    for inc in range(0, max_products, step):\n",
+    "        params[\"start\"] = start_num + inc\n",
+    "        df = pd.DataFrame(columns=WANT_ITEMS_YAHOO)\n",
+    "        res = requests.get(url=REQ_URL_CATE, params=params)\n",
+    "        res_cd = res.status_code\n",
+    "        if res_cd != 200:\n",
+    "            print(\"Bad request\")\n",
+    "            break\n",
+    "        else:\n",
+    "            res = json.loads(res.text)\n",
+    "            if len(res[\"hits\"]) == 0:\n",
+    "                print(\"If the number of returned items is 0, the loop ends.\")\n",
+    "            print(\"Get Data\")\n",
+    "            l_hit = []\n",
+    "            for h in res[\"hits\"]:\n",
+    "                l_hit.append(\n",
+    "                    (\n",
+    "                        h[\"index\"],\n",
+    "                        h[\"name\"],\n",
+    "                        create_url_yahoo(h[\"url\"]),\n",
+    "                        h[\"price\"],\n",
+    "                        knowledge_id,\n",
+    "                        platform_id,\n",
+    "                        size_id,\n",
+    "                        # 現在の日付と時刻を取得 & フォーマットを指定して文字列に変換\n",
+    "                        datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S.%f\"),\n",
+    "                        # 現在の日付と時刻を取得 & フォーマットを指定して文字列に変換\n",
+    "                        datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S.%f\"),\n",
+    "                    )\n",
+    "                )\n",
+    "            df = pd.DataFrame(l_hit, columns=WANT_ITEMS_YAHOO)\n",
+    "            l_df.append(df)\n",
+    "    if not l_df:\n",
+    "        print(\"no df\")\n",
+    "    else:\n",
+    "        return pd.concat(l_df, ignore_index=True)\n",
+    "\n",
+    "\n",
+    "def time_decorator(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        start_time = time.time()\n",
+    "        result = func(*args, **kwargs)\n",
+    "        end_time = time.time()\n",
+    "        print(f\"{func.__name__}の実行時間: {round(end_time - start_time)}秒\")\n",
+    "        return result\n",
+    "\n",
+    "    return wrapper\n",
+    "\n",
+    "\n",
+    "@time_decorator\n",
+    "def repeat_dataframe_maker(\n",
+    "    df_no_ng_keyword,\n",
+    "    platform_id,\n",
+    "    func,\n",
+    "    size_id=size_id,\n",
+    "    sleep_second=sleep_second,\n",
+    "):\n",
+    "    n_bulk = len(df_no_ng_keyword)\n",
+    "    df_bulk = pd.DataFrame()\n",
+    "    for i, n in enumerate(np.arange(n_bulk)):\n",
+    "        brand_name = df_no_ng_keyword.brand_name[n]\n",
+    "        line_name = df_no_ng_keyword.line_name[n]\n",
+    "        knowledge_name = df_no_ng_keyword.knowledge_name[n]\n",
+    "        query = f\"{brand_name} {line_name} {knowledge_name} 中古\"\n",
+    "        # query validatorが欲しい　半角1文字をなくす\n",
+    "        knowledge_id = df_no_ng_keyword.knowledge_id[n]\n",
+    "        print(f\"{i:03}, 検索キーワード:[\" + query + \"]\", \"knowledge_id:\", knowledge_id)\n",
+    "        output = func(query, platform_id, knowledge_id, size_id)\n",
+    "        df_bulk = pd.concat([df_bulk, output], ignore_index=True)\n",
+    "        sleep(sleep_second)\n",
+    "        # 開発環境では、1知識で試す\n",
+    "        # break\n",
+    "        # BIG Eでとめる\n",
+    "        if \"Levi's 501 BIGE 中古\" == query:\n",
+    "            break\n",
+    "    return df_bulk  # TODO:lambda実行でempty dataframe 原因調査から\n",
+    "\n",
+    "\n",
+    "def create_url_yahoo(aff_url):\n",
+    "    \"\"\"アフィリエイトURLがリンク切れのため一時的に素のURLを返す\"\"\"\n",
+    "    return urllib.parse.unquote(aff_url.split(\"vc_url=\")[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "81b765e8-43d1-41fa-a482-921566a696cd",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "000, 検索キーワード:[Levi's 501 66前期 中古] knowledge_id: 5\n",
+      "Finished!!\n",
+      "Finished!!\n",
+      "Finished!!\n",
+      "Finished!!\n",
+      "Finished!!\n",
+      "返ってきた商品数の数が0なので、ループ終了\n",
+      "price type before: object\n",
+      "price type after: int64\n",
+      "001, 検索キーワード:[U.S.ARMY M-65 FIELD JACKET 1st 中古] knowledge_id: 8\n",
+      "Finished!!\n",
+      "返ってきた商品数の数が0なので、ループ終了\n",
+      "price type before: object\n",
+      "price type after: int64\n",
+      "002, 検索キーワード:[Levi's 501 BIGE 中古] knowledge_id: 10\n",
+      "Finished!!\n",
+      "Finished!!\n",
+      "Finished!!\n",
+      "Finished!!\n",
+      "Finished!!\n",
+      "Finished!!\n",
+      "Finished!!\n",
+      "Finished!!\n",
+      "Finished!!\n",
+      "返ってきた商品数の数が0なので、ループ終了\n",
+      "price type before: object\n",
+      "price type after: int64\n",
+      "repeat_dataframe_makerの実行時間: 21秒\n",
+      "000, 検索キーワード:[Levi's 501 66前期 中古] knowledge_id: 5\n",
+      "Get Data\n",
+      "Get Data\n",
+      "Get Data\n",
+      "Get Data\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "Bad request\n",
+      "001, 検索キーワード:[U.S.ARMY M-65 FIELD JACKET 1st 中古] knowledge_id: 8\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "Bad request\n",
+      "002, 検索キーワード:[Levi's 501 BIGE 中古] knowledge_id: 10\n",
+      "Get Data\n",
+      "Get Data\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "If the number of returned items is 0, the loop ends.\n",
+      "Get Data\n",
+      "Bad request\n",
+      "repeat_dataframe_makerの実行時間: 9秒\n"
+     ]
+    }
+   ],
+   "source": [
+    "# df_bulkの作成\n",
+    "l_df_bulk = []\n",
+    "for platform_id, func in zip([1, 2], [DataFrame_maker_rakuten, DataFrame_maker_yahoo]):\n",
+    "    df_bulk = repeat_dataframe_maker(df_api_input, platform_id, func)\n",
+    "    l_df_bulk.append(df_bulk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "645d04ce-a07c-44d1-9d9c-30de0eb96e15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_bulk = pd.concat(l_df_bulk, axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c427e62d-629c-485d-b6a8-c8e1b5148ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_big_e = df_bulk[df_bulk[\"knowledge_id\"] == 10].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "fb161045-35ae-4ffa-b19e-7e258995d55f",
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>knowledge_id</th>\n",
-       "      <th>knowledge_name</th>\n",
-       "      <th>brand_name</th>\n",
-       "      <th>line_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>66前期</td>\n",
-       "      <td>Levi's</td>\n",
-       "      <td>501</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1st</td>\n",
-       "      <td>U.S.ARMY</td>\n",
-       "      <td>M-65 FIELD JACKET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10</td>\n",
-       "      <td>BIGE</td>\n",
-       "      <td>Levi's</td>\n",
-       "      <td>501</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>片面タブ</td>\n",
-       "      <td>Levi's</td>\n",
-       "      <td>501XX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12</td>\n",
-       "      <td>両面タブ</td>\n",
-       "      <td>Levi's</td>\n",
-       "      <td>501XX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>145</td>\n",
-       "      <td>71205</td>\n",
-       "      <td>Levi's</td>\n",
-       "      <td>71205</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>147</td>\n",
-       "      <td>ガスプロテクティブコート</td>\n",
-       "      <td>U.S.ARMY</td>\n",
-       "      <td>コート U.S.ARMY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>148</td>\n",
-       "      <td>517</td>\n",
-       "      <td>Levi's</td>\n",
-       "      <td>スタプレ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>149</td>\n",
-       "      <td>44-J</td>\n",
-       "      <td>Lee</td>\n",
-       "      <td>44-J</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>150</td>\n",
-       "      <td>Beer Jacket</td>\n",
-       "      <td>Lee</td>\n",
-       "      <td>Beer Jacket</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>116 rows × 4 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     knowledge_id knowledge_name brand_name          line_name\n",
-       "0               5           66前期     Levi's                501\n",
-       "1               8            1st   U.S.ARMY  M-65 FIELD JACKET\n",
-       "2              10           BIGE     Levi's                501\n",
-       "3              11           片面タブ     Levi's              501XX\n",
-       "4              12           両面タブ     Levi's              501XX\n",
-       "..            ...            ...        ...                ...\n",
-       "111           145          71205     Levi's              71205\n",
-       "112           147   ガスプロテクティブコート   U.S.ARMY       コート U.S.ARMY\n",
-       "113           148            517     Levi's               スタプレ\n",
-       "114           149           44-J        Lee               44-J\n",
-       "115           150    Beer Jacket        Lee        Beer Jacket\n",
-       "\n",
-       "[116 rows x 4 columns]"
+       "7248.000000000001"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_api_input"
+    "df_big_e[\"price\"].quantile(0.10)"
    ]
   }
  ],
