add: excluded records

--- a/notebook/exclude_noise.ipynb
+++ b/notebook/exclude_noise.ipynb
@@ -208,16 +208,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6fd69295-3821-47cd-a782-408bc449725b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_bulk_not_noise"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "id": "fdc4a7ed-4862-451f-8f7b-4dd92b97072d",
    "metadata": {
@@ -1240,6 +1230,48 @@
    ],
    "source": [
     "df_bulk[\"name\"].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a19aa8a1-ee0d-49ee-9b03-e05fd0e2fad9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1211, 9)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bulk.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "277945b4-ad18-4231-96a2-1c17668c689a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(900, 9)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bulk_not_noise.shape"
    ]
   },
   {
