refactor: exclude noise

--- a/notebook/exclude_noise.ipynb
+++ b/notebook/exclude_noise.ipynb
@@ -10,7 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Now: Local env\n"
+      "Now: Local env\n",
+      "Local bind port: 59941\n"
      ]
     }
    ],
@@ -22,8 +23,9 @@
     "import pandas as pd\n",
     "from sshtunnel import SSHTunnelForwarder\n",
     "\n",
+    "from vook_db_v7.exclude_noise import product_line_judge, product_noise_judge\n",
     "from vook_db_v7.local_config import get_ec2_config\n",
-    "from vook_db_v7.rds_handler import get_knowledges, get_lines\n",
+    "from vook_db_v7.rds_handler import get_knowledges\n",
     "from vook_db_v7.utils import (\n",
     "    DataFrame_maker_rakuten,\n",
     "    DataFrame_maker_yahoo,\n",
@@ -42,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Local bind port: 58552\n",
+      "Local bind port: 59952\n",
       "エラーワード　BIG Eが存在しました:\n",
       "BIG EをBIGEに変換します\n",
       "エラーワード　BIG Eが存在しました:\n",
@@ -62,7 +64,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "3825cffa-f59e-4cb8-a17c-aff9f12faf13",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -147,7 +151,7 @@
       "If the number of returned items is 0, the loop ends.\n",
       "Get Data\n",
       "Bad request\n",
-      "repeat_dataframe_makerの実行時間: 10秒\n"
+      "repeat_dataframe_makerの実行時間: 8秒\n"
      ]
     }
    ],
@@ -166,43 +170,6 @@
    "metadata": {},
    "source": [
     "# ヴィンテージ一NGワードを除外する"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ab02057d-61a8-4d33-bf61-c07ebbb1a873",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# product_noise_judge.csvを読み込む\n",
-    "df_product_noise_judge = pd.read_csv(\"./data/input/product_noise_judge.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "be2bb98c-1d13-482f-9b5b-05c7508e83aa",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "def product_noise_judge(\n",
-    "    df: pd.DataFrame, df_judge: pd.DataFrame = df_product_noise_judge\n",
-    "):\n",
-    "    l_df_knowledge_excluded = []\n",
-    "    for knowledge_id in df[\"knowledge_id\"].unique():\n",
-    "        df_knowledge = df[df[\"knowledge_id\"] == knowledge_id].copy()\n",
-    "        df_knowledge_tmp = df_knowledge.copy()  # 初期化\n",
-    "        for i, noise in enumerate(\n",
-    "            df_judge[df_judge[\"product_id\"] == knowledge_id][\"noise_nm\"]\n",
-    "        ):\n",
-    "            df_knowledge_tmp = df_knowledge_tmp[\n",
-    "                [noise not in name for name in df_knowledge_tmp[\"name\"]]\n",
-    "            ].copy()\n",
-    "        l_df_knowledge_excluded.append(df_knowledge_tmp.copy())\n",
-    "    return pd.concat(l_df_knowledge_excluded)"
    ]
   },
   {
@@ -346,7 +313,7 @@
        " \"Levi'sリーバイス 501 デニムパンツ w38★SDP2846 【中古】\",\n",
        " \"Levi'sリーバイス 501 デニムパンツ w32 L32★SDP2712 【中古】\",\n",
        " \"Levi'sリーバイス 501 USED加工 デニムパンツ w30 L30★SDP2702 【中古】\",\n",
-       " \"Levi'sリーバイス 501 デニムパンツ w38★SDP2846 【中古】\",\n",
+       " \"メキシコ製 Levi'sリーバイス 501 USED加工 ストレッチ デニムパンツ w35 L32★SDP2834 【中古】\",\n",
        " \"メキシコ製 Levi'sリーバイス 501 ペンキ飛び ストレッチ デニムパンツ w38 L29★SDP2848 【中古】\",\n",
        " \"メキシコ製 Levi'sリーバイス 501 ストレッチ デニムパンツ w34 L30★SDP2886 【中古】\",\n",
        " \"Levi'sリーバイス 501 ダメージ デニムパンツ w31 L32★SDP2789 【中古】\",\n",
@@ -354,13 +321,13 @@
        " \"Levi'sリーバイス 501 デニムパンツ w34 L32★SDP2868 【中古】\",\n",
        " \"Levi'sリーバイス 501 ペンキ飛び デニムパンツ w36 L32★SDP2843 【中古】\",\n",
        " \"Levi'sリーバイス 501 ダメージ デニムパンツ w33 L30★SDP2807 【中古】\",\n",
-       " \"Levi'sリーバイス 501 デニムパンツ w35 L32★SDP2761【中古】\",\n",
+       " \"メキシコ製 Levi'sリーバイス 501 デニムパンツ w36 L30★SDP2887 【中古】\",\n",
        " \"Levi'sリーバイス 501 ダメージ&ペンキ飛び デニムパンツ w34 L32★SDP2760 【中古】\",\n",
        " \"Levi'sリーバイス 501 ダメージ デニムパンツ w32 L32★SDP2717 【中古】\",\n",
        " \"Levi'sリーバイス 501 ペンキ飛び デニムパンツ w33★SDP2864【中古】\",\n",
        " \"メキシコ製 Levi'sリーバイス 501 ダメージ デニムパンツ w34 L32★SDP2893 【中古】\",\n",
        " \"メキシコ製 Levi'sリーバイス 501 先染め グレー デニムパンツ カスタム w32★SDP2830 【中古】\",\n",
-       " \"メキシコ製 Levi'sリーバイス 501 デニムパンツ w36 L30★SDP2887 【中古】\",\n",
+       " \"Levi'sリーバイス 501 デニムパンツ w35 L32★SDP2761【中古】\",\n",
        " \"Levi'sリーバイス 501 デニムパンツ w32 L32★SDP2787 【中古】\",\n",
        " \"メキシコ製 Levi'sリーバイス 501 デニムパンツ w36 L32★SDP2845 【中古】\",\n",
        " \"Levi'sリーバイス 501 デニムパンツ w36 L32★SDP2762 【中古】\",\n",
@@ -418,8 +385,8 @@
        " \"Levi's(リーバイス) サイズ:実寸 W30 L29 60 70s VINTAGE 501 BIG E 後期 トップボタン裏 6 ボタンフライ デニムパンツ インディゴ ヴィンテージ【中古】【程度B】【カラーブルー】【取扱店舗AWESOME原宿店】\",\n",
        " '【中古】Levi’s◆BIGE/BIGE後期/不均等V/刻印E/足長R/501/インディゴ//【メンズウェア】',\n",
        " \"Levi's(リーバイス) サイズ:W30/L28 60s VINTAGE 501 BIG E 後期 ボタン裏4 デニムパンツ インディゴ【中古】【程度B】【カラーブルー】【取扱店舗AWESOME原宿店】\",\n",
-       " \"Levi's(リーバイス) 60S-70S VINTAGE 501 BIGE 後期 ボタン裏6 足長R 紙パッチ ヴィンテージ デニムパンツ インディゴ【中古】【程度C】【カラーブルー】【取扱店舗AWESOME原宿店】\",\n",
        " \"60s Levi's 501 BIG E Denim Pants 薄青 W36×L31 Levis リーバイス 501 ビッグE デニム 不均等V 足長R Vステッチ ヴィンテージ 古着 【中古】\",\n",
+       " \"Levi's(リーバイス) 60S-70S VINTAGE 501 BIGE 後期 ボタン裏6 足長R 紙パッチ ヴィンテージ デニムパンツ インディゴ【中古】【程度C】【カラーブルー】【取扱店舗AWESOME原宿店】\",\n",
        " 'LEVIS リーバイス ヴィンテージ 501 デニムパンツ BigE 赤耳 ボロ ボタン刻印J インディゴ 正規品 / 33402【中古】',\n",
        " '【中古】Levi’s◆501/BIGE/ボタン裏4/ボトム/--/デニム/IDG【メンズウェア】',\n",
        " '【中古】Levi’s◆501ZXX/実寸72cm/BIGE/銅リベット/センターループずれ【メンズウェア】',\n",
@@ -479,8 +446,8 @@
        " '【中古】Levi’s◆VT/70s/BIGE/501/並行ステッチ/--/デニム/IDG/実寸27インチ/70パーセント【メンズウェア】',\n",
        " '【中古】Levi’s◆ストレートパンツ/--/デニム/IDG/60s/501/BIGE/足長R/ボタン裏6//【メンズウェア】',\n",
        " '【中古】Levi’s◆VT/60s-70s/BIGE/501/平行ステッチ/ストレートパンツ/--/デニム/IDG/リペア有【メンズウェア】',\n",
-       " '【中古】Levi’s◆60s~70s/501/BigE後期/過渡期/ボタン裏6/紙パッチ/ダメージ・リペア有【メンズウェア】',\n",
        " '【中古】Levi’s◆60s/501/BIGE/ウエストチェーン/平行ステッチ/刻印無/タイプ物/リペア・ダメージ有【メンズウェア】',\n",
+       " '【中古】Levi’s◆60s~70s/501/BigE後期/過渡期/ボタン裏6/紙パッチ/ダメージ・リペア有【メンズウェア】',\n",
        " '【中古】Levi’s◆ストレートパンツ/デニム/60s～70s/501/BIGE/不均等V/ボタン裏8/リペア有/黒カン【メンズウェア】',\n",
        " '【中古】Levisデッドストック 501XX For Over 110 Years 66復刻 BIG E インディゴ サイズ：W28【価格見直し】',\n",
        " '【中古】LEVI’S\\u3000501 BIG E デニムパンツ VINTAGE トップボタン裏6 インディゴ サイズ：W36 【040624】（リーバイス）',\n",
@@ -1315,8 +1282,8 @@
        " \"Levi's(リーバイス) サイズ:実寸 W30 L29 60 70s VINTAGE 501 BIG E 後期 トップボタン裏 6 ボタンフライ デニムパンツ インディゴ ヴィンテージ【中古】【程度B】【カラーブルー】【取扱店舗AWESOME原宿店】\",\n",
        " '【中古】Levi’s◆BIGE/BIGE後期/不均等V/刻印E/足長R/501/インディゴ//【メンズウェア】',\n",
        " \"Levi's(リーバイス) サイズ:W30/L28 60s VINTAGE 501 BIG E 後期 ボタン裏4 デニムパンツ インディゴ【中古】【程度B】【カラーブルー】【取扱店舗AWESOME原宿店】\",\n",
-       " \"Levi's(リーバイス) 60S-70S VINTAGE 501 BIGE 後期 ボタン裏6 足長R 紙パッチ ヴィンテージ デニムパンツ インディゴ【中古】【程度C】【カラーブルー】【取扱店舗AWESOME原宿店】\",\n",
        " \"60s Levi's 501 BIG E Denim Pants 薄青 W36×L31 Levis リーバイス 501 ビッグE デニム 不均等V 足長R Vステッチ ヴィンテージ 古着 【中古】\",\n",
+       " \"Levi's(リーバイス) 60S-70S VINTAGE 501 BIGE 後期 ボタン裏6 足長R 紙パッチ ヴィンテージ デニムパンツ インディゴ【中古】【程度C】【カラーブルー】【取扱店舗AWESOME原宿店】\",\n",
        " 'LEVIS リーバイス ヴィンテージ 501 デニムパンツ BigE 赤耳 ボロ ボタン刻印J インディゴ 正規品 / 33402【中古】',\n",
        " '【中古】Levi’s◆501/BIGE/ボタン裏4/ボトム/--/デニム/IDG【メンズウェア】',\n",
        " '【中古】Levi’s◆501ZXX/実寸72cm/BIGE/銅リベット/センターループずれ【メンズウェア】',\n",
@@ -1370,8 +1337,8 @@
        " '【中古】Levi’s◆VT/70s/BIGE/501/並行ステッチ/--/デニム/IDG/実寸27インチ/70パーセント【メンズウェア】',\n",
        " '【中古】Levi’s◆ストレートパンツ/--/デニム/IDG/60s/501/BIGE/足長R/ボタン裏6//【メンズウェア】',\n",
        " '【中古】Levi’s◆VT/60s-70s/BIGE/501/平行ステッチ/ストレートパンツ/--/デニム/IDG/リペア有【メンズウェア】',\n",
-       " '【中古】Levi’s◆60s~70s/501/BigE後期/過渡期/ボタン裏6/紙パッチ/ダメージ・リペア有【メンズウェア】',\n",
        " '【中古】Levi’s◆60s/501/BIGE/ウエストチェーン/平行ステッチ/刻印無/タイプ物/リペア・ダメージ有【メンズウェア】',\n",
+       " '【中古】Levi’s◆60s~70s/501/BigE後期/過渡期/ボタン裏6/紙パッチ/ダメージ・リペア有【メンズウェア】',\n",
        " '【中古】Levi’s◆ストレートパンツ/デニム/60s～70s/501/BIGE/不均等V/ボタン裏8/リペア有/黒カン【メンズウェア】',\n",
        " '【中古】LEVI’S\\u3000501 BIG E デニムパンツ VINTAGE トップボタン裏6 インディゴ サイズ：W36 【040624】（リーバイス）',\n",
        " \"Levi's(リーバイス) 70's Vintage 501 BIG E 後期 ボタンフライ デニムパンツ インディゴ ボタン裏8【中古】【程度C】【カラーブルー】【取扱店舗BRINGアメリカ村店】\",\n",
@@ -1561,47 +1528,8 @@
    "execution_count": 11,
    "id": "d9b5212e-7874-4ae1-9610-c95b8af72820",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Local bind port: 58694\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# def product_line_judge(df: pd.DataFrame, df_mst: pd.DataFrame = get_knowledges()):\n",
-    "#     l_df_knowledge_excluded = []\n",
-    "#     df_knowledge_mst = df_mst[[\"knowledge_id\", \"line_name\"]].copy()\n",
-    "\n",
-    "#     for knowledge_id in df[\"knowledge_id\"].unique():\n",
-    "#         # 該当の knowledge_id に対応する df_knowledge を取得\n",
-    "#         df_knowledge = df[df[\"knowledge_id\"] == knowledge_id].copy()\n",
-    "#         df_knowledge_tmp = df_knowledge.copy()  # 初期化\n",
-    "\n",
-    "#         # knowledge_id に対応する line_name を取得\n",
-    "#         current_line_name = df_knowledge_mst[\n",
-    "#             df_knowledge_mst[\"knowledge_id\"] == knowledge_id\n",
-    "#         ][\"line_name\"].values[0]\n",
-    "\n",
-    "#         # 他のすべての line_name を取得（current_line_name を除く）\n",
-    "#         other_line_names = df_knowledge_mst[\n",
-    "#             df_knowledge_mst[\"line_name\"] != current_line_name\n",
-    "#         ][\"line_name\"].unique()\n",
-    "\n",
-    "#         # name列に他のline_nameが含まれているか確認し、それを除外\n",
-    "#         df_knowledge_tmp = df_knowledge_tmp[\n",
-    "#             ~df_knowledge_tmp[\"name\"].apply(\n",
-    "#                 lambda name: any(line in name for line in other_line_names)\n",
-    "#             )\n",
-    "#         ]\n",
-    "\n",
-    "#         l_df_knowledge_excluded.append(df_knowledge_tmp)\n",
-    "\n",
-    "#     return pd.concat(l_df_knowledge_excluded)\n",
-    "\n",
-    "\n",
     "df_bulk_not_noise_ng_line = product_line_judge(df_bulk_not_noise_ng_word)"
    ]
   },
